# lg3

./: .gitignore  README.md  pyproject.toml
baseline/: __init__.py
baseline/baselines/: __init__.py  evaluation.py  methods.py
baselines/: __init__.py  evaluation.py  methods.py
example/: mlp_baseline_demo.ipynb  mlp_weekly_lag_demo.ipynb
gru_fourier/: __init__.py
gru_fourier/config/: evaluate.toml  preprocess.toml  train.toml
gru_fourier/evaluation/: runner.py  runner_plot.py
gru_fourier/preprocess/: __init__.py  ereport.py  fourier.py  io_utils.py  pipeline.py  smartcare.py  time_features.py  weather.py
gru_fourier/src/: __init__.py  __main__.py  config.py  evaluate_main.py  evaluate_plot_main.py  preprocess.py  preprocess_main.py  train_main.py
gru_fourier/training/: common.py  runner.py
hduck/: OBS_ASOS_TIM_20250701_20250930_OS 1.csv  OBS_ASOS_TIM_20250701_20250930_snu.csv  OBS_ASOS_TIM_20250914_20251017 1.csv  n주 학습 1주 발리드 윈도우 학습 테스트.ipynb
processed_data/: preprocessed_1h_master_with_weather_delta_20250701_20250930_ohsungsa_f2.csv  smoke_ohsungsa_f2.csv
processed_data/elec1_f2/: lg3_test.npy  lg3_val.npy
processed_data/ohsung_f2/: lg3_train.csv  lg3_val.npy
processed_data/snu/: lg3_train.csv  lg3_val.npy
processed_sources/elec1_f2/: lg3_test.csv  lg3_train.csv  lg3_train.npy  lg3_val.csv
processed_sources/ohsung_f2/: lg3_test.csv  lg3_test.npy  lg3_train.npy  lg3_val.csv
processed_sources/snu/: lg3_test.csv  lg3_test.npy  lg3_train.npy  lg3_val.csv
runs_lstm24_roll/cnn1d/: LATEST_RUN.json
scripts/: run_baselines.py
(+6 files in other folders)
