[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lg3"
version = "0.1.0"
description = "Load forecasting experiments with preprocessing, training, and evaluation pipelines."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "data",
  "processed_data",
  "runs_lstm24_roll",
  "hduck",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/run_baselines.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
